[package]
name = "discord_image_downloader"
version = "0.1.0"
authors = ["Subreme <71085002+subreme@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serenity = "0.10"
bytes = "1.0.1"
image = "0.23.14"
